commit projeto space-travelling

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,9 @@
-// TODO
+.container {
+  max-width: 1120px;
+  padding: 0 13.125rem;
+  margin: 2.5rem auto;
+
+  &.homePage {
+    margin: 5rem auto;
+  }
+}
