--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,55 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+:root {
+  --pink-300: #ff57b2;
+
+  --gray-100: #f8f8f8;
+  --gray-300: #d7d7d7;
+  --gray-400: #bbbbbb;
+  --gray-800: #1a1d23;
+
+  --white: #ffffff;
 }
 
-// TODO
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+// Tablet
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+// Mobile
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+
+body {
+  background: var(--gray-800);
+  color: var(--white);
+}
+
+body,
+input,
+textarea,
+select,
+button {
+  font: 400 1rem 'Inter', sans-serif;
+}
+
+button {
+  cursor: pointer;
+  border: 0;
+  padding: 0;
+  background: inherit;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
